# bitwark

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  payload.rs  salt.rs  signed_exp.rs
src/keys/: ed.rs
